NGP-TWC/wdp-abstract-canvas/issues/755 fix add remove button alignment for field picker (#756)

--- a/canvas_modules/common-canvas/assets/styles/common-properties.css
+++ b/canvas_modules/common-canvas/assets/styles/common-properties.css
@@ -304,14 +304,20 @@ input.number,
   border-bottom: none;
 }
 
+#field-picker-buttons-container {
+  display: flex;
+  float: right;
+  justify-content: space-between;
+  width: 145px;
+}
+
 #add-fields-button {
   border: none;
   float: right;
-  padding-top: 2px;
-  padding-right: 0px;
-  padding-left: 10px;
-  margin-right: 0px;
+  padding: 0px 3px;
+  margin-left: 0px;
   text-decoration: underline;
+  line-height: inherit;
 }
 
 #reset-fields-button {
@@ -343,14 +349,18 @@ input.number,
 [id^=remove-fields-button] {
   float: right;
   border: none !important;
-  margin-top: 2px !important;
-  margin-bottom: 2px !important;
-  padding-top: 4px !important;
-  height: 30.75px;
-  width: 33px;
+  padding-bottom: 1px !important;
+  padding: 0px;
+  padding-left: 2px;
+  padding-right: 2px;
+  margin-left: 0px;
   fill: #A91560;
-  padding-left: 5px !important;
-  padding-right: 5px !important;
+  line-height: inherit !important;
+}
+
+[id^=remove-fields-button] > img {
+  width: 23px;
+  height: 23px;
 }
 
 #remove-fields-button-disabled {
@@ -632,6 +642,8 @@ tr.reactable-column-header {
 
 #add-fields-button > span > svg:not(:root) {
   overflow: visible;
+  margin: 0px;
+  margin-right: 5px;
 }
 
 .column-structure-allocator-control-row-selected .public_fixedDataTableCell_main {
